feat: update eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,10 @@
   ], 
   "env": {
     "node": true
+  },
+  "rules": {
+    "prefer-const": "off",
+    "no-prototype-builtins": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
