--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   "rules": {
     "prefer-const": "off",
     "no-prototype-builtins": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-namespace": "off"
   }
 }
