--- a/.eslintrc
+++ b/.eslintrc
@@ -2,15 +2,15 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest", 
-    "sourceType": "module" 
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ], 
+  ],
   "env": {
     "node": true
   },
@@ -18,6 +18,7 @@
     "prefer-const": "off",
     "no-prototype-builtins": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-namespace": "off"
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-var-requires": "off"
   }
 }
